--- a/dotfiles/.config/kitty/kitty.conf
+++ b/dotfiles/.config/kitty/kitty.conf
@@ -17,7 +17,7 @@ initial_window_width  800
 initial_window_height 600
 
 # EDITOR
-editor /opt/homebrew/bin/nvim
+# editor /opt/homebrew/bin/nvim
 
 
 # BEGIN_KITTY_THEME
