--- a/dotfiles/.config/zed/settings.json
+++ b/dotfiles/.config/zed/settings.json
@@ -41,5 +41,9 @@
       "model": "claude-3-5-sonnet-latest"
     },
     "version": "2"
+  },
+
+  "features": {
+    "edit_prediction_provider": "zed"
   }
 }
