--- a/dotfiles/.config/git/config
+++ b/dotfiles/.config/git/config
@@ -53,6 +53,7 @@
 [delta]
     navigate = true  # use n and N to move between diff sections
     side-by-side = true
+    features = catppuccin-mocha
 
 [merge]
     conflictstyle = diff3
@@ -67,5 +68,5 @@
 	required = true
 
 [include]
-    path = config.local
-    path = config.darwin
+    path = local.gitconfig
+    path = darwin.gitconfig
