add postgresql and mysql clients

--- a/dotfiles/.config/zed/settings.json
+++ b/dotfiles/.config/zed/settings.json
@@ -44,10 +44,9 @@
 
   "agent": {
     "default_model": {
-      "provider": "zed.dev",
-      "model": "claude-3-7-sonnet-latest"
-    },
-    "version": "2"
+      "provider": "copilot_chat",
+      "model": "gpt-4o"
+    }
   },
 
   "features": {
