--- a/dotfiles/.config/zed/settings.json
+++ b/dotfiles/.config/zed/settings.json
@@ -18,6 +18,7 @@
   "buffer_font_family": "JetBrainsMono Nerd Font",
   "buffer_font_size": 16,
   "buffer_line_height": "standard",
+  "soft_wrap": "preferred_line_length",
 
   //
   "restore_on_startup": "none",
@@ -44,52 +45,36 @@
 
   "language_models": {
     "openai": {
-      "api_url": "https://dashscope.aliyuncs.com/compatible-mode/v1",
+      "api_url": "https://open.bigmodel.cn/api/paas/v4",
       "available_models": [
         {
-          "name": "qwen3-coder-plus",
-          "display_name": "qwen3-coder-plus",
+          "name": "glm-4.5",
+          "display_name": "glm-4.5",
           "max_tokens": 0
         },
         {
-          "name": "qwen3-coder-plus-2025-07-22",
-          "display_name": "qwen3-coder-plus-2025-07-22",
+          "name": "glm-4.5-x",
+          "display_name": "glm-4.5-x",
           "max_tokens": 0
         },
         {
-          "name": "qwen3-coder-480b-a35b-instruct",
-          "display_name": "qwen3-coder-480b-a35b-instructs",
+          "name": "glm-4.5-air",
+          "display_name": "glm-4.5-air",
+          "max_tokens": 0
+        },
+        {
+          "name": "glm-4.5-airx",
+          "display_name": "glm-4.5-airx",
           "max_tokens": 0
         }
       ]
     }
-    // "openai": {
-    //   "api_url": "https://api.moonshot.cn/v1",
-    //   "available_models": [
-    //     {
-    //       "name": "kimi-k2-0711-preview",
-    //       "display_name": "kimi-k2-0711-preview",
-    //       "max_tokens": 0
-    //     }
-    //   ]
-    // },
-    // "anthropic": {
-    //   "api_url": "https://api.moonshot.cn/anthropic",
-    //   "available_models": [
-    //     {
-    //       "name": "kimi-k2-0711-preview",
-    //       "display_name": "kimi-k2-0711-preview",
-    //       "max_tokens": 0,
-    //       "default_temperature": 0.6
-    //     }
-    //   ]
-    // }
   },
 
   "agent": {
     "default_model": {
       "provider": "openai",
-      "model": "qwen3-coder-plus-2025-07-22"
+      "model": "glm-4.5"
     }
   },
 
