--- a/dotfiles/.config/zed/settings.json
+++ b/dotfiles/.config/zed/settings.json
@@ -73,8 +73,8 @@
 
   "agent": {
     "default_model": {
-      "provider": "openai",
-      "model": "glm-4.5"
+      "provider": "lmstudio",
+      "model": "qwen3-coder-30b-a3b-instruct-mlx@8bit"
     }
   },
 
