--- a/dotfiles/.config/zed/settings.json
+++ b/dotfiles/.config/zed/settings.json
@@ -74,7 +74,7 @@
   "agent": {
     "default_model": {
       "provider": "lmstudio",
-      "model": "qwen3-coder-30b-a3b-instruct-mlx@8bit"
+      "model": "qwen/qwen3-coder-30b"
     }
   },
 
