--- a/dotfiles/.config/ghostty/config
+++ b/dotfiles/.config/ghostty/config
@@ -1,5 +1,5 @@
 font-size = 16
 font-codepoint-map = U+4E00-U+9FFF,U+3400-U+4DBF="LXGW WenKai Mono"
-theme = "catppuccin-mocha"
+theme = "Catppuccin Mocha"
 
 config-file = ?config.local
