--- a/dotfiles/.config/zed/settings.json
+++ b/dotfiles/.config/zed/settings.json
@@ -45,8 +45,8 @@
 
   "agent": {
     "default_model": {
-      "provider": "lmstudio",
-      "model": "qwen/qwen3-coder-30b"
+      "provider": "deepseek",
+      "model": "deepseek-chat"
     }
   },
 
