update zed ai agent from deepseek to copilot_chat and refresh flake inputs

--- a/dotfiles/.config/zed/settings.json
+++ b/dotfiles/.config/zed/settings.json
@@ -45,8 +45,8 @@
 
   "agent": {
     "default_model": {
-      "provider": "deepseek",
-      "model": "deepseek-chat"
+      "provider": "copilot_chat",
+      "model": "gpt-5-mini"
     }
   },
 
